infra/k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: ljparfan22/sideshop-cart
          # readinessProbe:
          #   tcpSocket:
          #     port: 3000
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
