infra/k8s/inventory-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db-deployment
  labels:
    app: inventory-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
        - name: inventory-db
          image: postgres:15.1-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-db-service
spec:
  type: NodePort
  selector:
    app: inventory-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30001
