infra/k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: ljparfan22/sideshop-inventory
          # readinessProbe:
          #   tcpSocket:
          #     port: 3000
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
