infra/k8s/order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db-deployment
  labels:
    app: order-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: postgres:15.1-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: order-db-service
spec:
  type: NodePort
  selector:
    app: order-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30003
