infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sideshop.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 3000
          - path: /api/categories/?(.*)
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 3000
          - path: /api/brands/?(.*)
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 3000
          - path: /api/cart-items/?(.*)
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3000
